--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.9",
-    "he": "^1.2.0",
+    "rss-parser": "^3.13.0",
+    "openai": "^4.0.0",
     "jaro-winkler": "^0.2.8",
-    "openai": "^4.77.4"
+    "he": "^1.2.0"
   }
 }
