--- a/github/workflows/generate-report.yml
+++ b/github/workflows/generate-report.yml
@@ -33,7 +33,7 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           # Optional: Override other config via environment variables
           # GA_MEASUREMENT_ID: ${{ secrets.GA_MEASUREMENT_ID }}
-        run: node generate-report.mjs  # Adjust filename if needed
+        run: node generate-report.js  # Adjust filename if needed
       
       - name: Upload generated files as artifacts
         uses: actions/upload-artifact@v4
