--- a/.github/workflows/generate-report.yml
+++ b/.github/workflows/generate-report.yml
@@ -3,10 +3,8 @@ name: Generate Political News Report
 on:
   schedule:
     # Runs at 00:00, 08:00, and 16:00 UTC (every 8 hours)
+    # Adjust times as needed: Europe/Bucharest is UTC+2/UTC+3 DST
     - cron: '0 */8 * * *'
-    
-    # Alternative: Specific times (6am, 2pm, 10pm UTC)
-    # - cron: '0 6,14,22 * * *'
     
   # Allow manual triggering for testing
   workflow_dispatch:
@@ -26,14 +24,14 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci  # Uses package-lock.json for faster, reliable installs
+        run: npm ci  # Uses your existing package.json and package-lock.json
       
       - name: Run news aggregation script
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          # Optional: Override other config via environment variables
+          # Optional: Override GA ID if needed
           # GA_MEASUREMENT_ID: ${{ secrets.GA_MEASUREMENT_ID }}
-        run: node generate-report.js  # Adjust filename if needed
+        run: npm run build  # Executes "node build-report.js"
       
       - name: Upload generated files as artifacts
         uses: actions/upload-artifact@v4
